# kafka-training

./: .gitignore  docker-compose.yaml
external_service_mock/: Cargo.toml  Dockerfile
external_service_mock/src/: main.rs
kafka_configuration/: .terraform.lock.hcl  main.tf  terraform.tfstate  topics.tf
kafka_training_java/: build.gradle.kts  settings.gradle.kts
kafka_training_java/gradle/wrapper/: gradle-wrapper.properties
kafka_training_java/src/main/java/de/kakadulabs/: KafkaAvroConsumer.java  KafkaStreamsExample.java
kafka_training_python/: .example.env  Makefile  README.md  pyproject.toml
kafka_training_python/src/kafka_training_python/: common.py
kafka_training_python/src/kafka_training_python/consumers/: get_payload_size.py  json_consumer.py
kafka_training_python/src/kafka_training_python/producers/: avro_producer.py  json_producer.py  plaintext_producer.py
kafka_training_python/tests/integration/: test_avro_producer.py
