[package]
name = "external_service_mock"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.1"
rust_decimal = "1.37.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.140"
