[project]
name = "kafka_training_python"
version = "0.1.0"
description = "A small repo to play with Kafka and Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka[protobuf,schemaregistry,avro] ==2.10.1",
    "duckdb>=1.3.1",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[project.scripts]
plaintext_producer = "kafka_training_python.producers.plaintext_producer:main"
avro_producer = "kafka_training_python.producers.avro_producer:main"
json_producer = "kafka_training_python.producers.json_producer:main"
json_consumer = "kafka_training_python.consumers.json_consumer:main"

[project.optional-dependencies]
dev = ["pytest>=8.4.1", "ruff>=0.12.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 123


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]


[tool.hatch.build.targets.wheel]
packages = ["src/kafka_training_python"]
